[package]
name = "nop-attr"
description = "Renamed to nop-macros - An attribute macro that does nothing"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Techcable/nop-macros.rust"
readme = "README.md"

[dependencies]
nop-macros = { version = "0.2.0", path = ".." }

